# rmud

./: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  main.rs  ui.rs
client/src/app/: connected.rs  login.rs  mod.rs
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  request.rs
