[package]
name = "rmud-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
tokio = { version = "1.35.1", features = ["full"] }
tui-textarea = "0.4.0"
model = {path = "../model"}
bincode = "1.3.3"
chrono = "0.4.31"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
